--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 -->
 <html>
 	<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117339330-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-117339330-3');
+    </script>
+
 		<title>Unsupervised Robust Disentangling of Latent Characteristics for
       Image Synthesis</title>
 		<meta charset="utf-8" />
@@ -15,6 +25,274 @@
 	</head>
 	<body class="landing">
 
+		<!-- Banner -->
+			<section id="banner">
+        <h2>Unsupervised Robust Disentangling<br/>of Latent
+          Characteristics<br/>for
+          Image Synthesis</h2>
+        <p>
+        <a href="https://github.com/pesser">Patrick Esser</a>, 
+        <a href="https://github.com/jhaux">Johannes Haux</a>,
+        <a href="https://hci.iwr.uni-heidelberg.de/Staff/bommer">Bj&ouml;rn Ommer</a><br/>
+        <a href="https://www.iwr.uni-heidelberg.de/">IWR, Heidelberg University</a><br/>
+        <a href="http://iccv2019.thecvf.com/">ICCV 2019</a></p>
+			</section>
+
+			<!-- One -->
+				<section id="one" class="wrapper style1">
+					<div class="container 75%">
+						<div class="row 200%">
+							<div class="6u 12u$(medium) vert-center">
+                  <div class="container 25%">
+                    <div class="image fit captioned align-center">
+                      <a href="images/rodi.pdf">
+                        <img src="images/paper.jpg" alt="" style="border:1px solid black"/>
+                      </a>
+                      <a href="https://arxiv.org/">arXiv</a>
+                      <div class="headerDivider"></div>
+                      <a href="images/rodi.bib">BibTeX</a>
+                      <div class="headerDivider"></div>
+                      <a href="https://github.com/CompVis/robust-disentangling">GitHub</a>
+                      <br/>
+                    </div>
+                  </div>
+							</div>
+							<div class="6u$ 12u$(medium)">
+                <h1>Abstract</h1>
+                <p>
+Deep generative models come with the promise to learn an explainable
+representation for visual objects that allows image sampling, synthesis, and
+selective modification. The main challenge is to learn to properly model the
+independent latent characteristics of an object, especially its appearance
+and pose. We present a novel approach that learns disentangled
+representations of these characteristics and explains them individually.
+Training requires only pairs of images depicting the same object appearance,
+but no pose annotations.  We propose an additional classifier that estimates
+the minimal amount of regularization required to enforce disentanglement.
+Thus both representations together can completely explain an image while
+being independent of each other. Previous methods based on adversarial
+approaches fail to enforce this independence, while methods based on
+variational approaches lead to uninformative representations.  In
+experiments on diverse object categories, the approach successfully
+recombines pose and appearance to reconstruct and retarget novel synthesized
+images. We achieve significant improvements over state-of-the-art methods
+which utilize the same level of supervision, and reach performances
+comparable to those of pose-supervised approaches.  However, we can handle
+the vast body of articulated object classes for which no pose
+models/annotations are available.
+                </p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Two -->
+				<section id="two" class="wrapper style2 special">
+					<div class="container">
+						<header class="major">
+							<h2>Results</h2>
+							<p>and applications of our model.</p>
+						</header>
+
+            <div class="row 150%">
+<div class="6u 12u$(xsmall)">
+								<div class="image fit captioned">
+                  <div class="videocontainer">
+                  <video poster="images/ntu.jpg" controls class="videothing">
+                   <source src="images/ntu.webm" type="video/webm">
+                   Your browser does not support the video tag.
+                  </video>
+                  </div>
+                  <h3>Video synthesis on the NTU dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <div class="videocontainer">
+                  <video poster="images/bbc.jpg" controls class="videothing">
+                   <source src="images/bbc.webm" type="video/webm">
+                   Your browser does not support the video tag.
+                  </video>
+                  </div>
+                  <h3>Video synthesis on the BBC dataset.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <div class="videocontainer">
+                  <video poster="images/norb.jpg" controls class="videothing">
+                   <source src="images/norb.webm" type="video/webm">
+                   Your browser does not support the video tag.
+                  </video>
+                  </div>
+                  <h3>Video synthesis on the NORB dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/teaser.png">
+									<img src="images/teaser.jpg" alt="" />
+                  </a>
+									<h3>Retrieval and synthesis using disentangled shape and appearance.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/bbc_matrix.png">
+									<img src="images/bbc_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the BBC dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/animals_matrix.png">
+									<img src="images/animals_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on animals.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/ntu_matrix.png">
+									<img src="images/ntu_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the NTU dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/vi_matrix.png">
+									<img src="images/vi_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the PKU dataset.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/norb_matrix.png">
+									<img src="images/norb_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the NORB dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/full__vi_matrix.png">
+									<img src="images/full_vi_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the PKU dataset.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/sprites_compare.png">
+									<img src="images/sprites_compare.jpg" alt="" />
+                  </a>
+									<h3>Comparison on the Sprites dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/full_ntu_matrix.png">
+									<img src="images/full_ntu_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the NTU dataset.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/full_norb_matrix.png">
+									<img src="images/full_norb_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the NORB dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/df_interpolation.png">
+									<img src="images/df_interpolation.jpg" alt="" />
+                  </a>
+									<h3>Interpolation along pose (horizontal direction) and
+appearance (vertical direction).</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/full_df_matrix.png">
+									<img src="images/full_df_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the DeepFashion dataset.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/full_bbc_matrix.png">
+									<img src="images/full_bbc_matrix.jpg" alt="" />
+                  </a>
+									<h3>Transfer results on the BBC dataset.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/df_comparison.png">
+									<img src="images/df_comparison.jpg" alt="" />
+                  </a>
+									<h3>Comparison to our previous work <a
+href="https://compvis.github.io/vunet">VUNet</a> which relied on
+fully-supervised keypoint estimators.</h3>
+								</div>
+</div>
+</div>
+
+
+				  </div>
+				</section>
+
+
+			<!-- Four -->
+				<section id="four" class="wrapper style3 special">
+					<div class="container">
+						<header class="major">
+							<h2>Acknowledgement</h2>
+              <p>This work has been funded by the German Research Foundation
+              (DFG projects 371923335; 421703927)<br/>and a hardware donation from NVIDIA.
+              This page is based on a design by <a href="http://templated.co">TEMPLATED</a>.</p>
+						</header>
+					</div>
+				</section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
