--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 							<div class="6u 12u$(medium) vert-center">
                   <div class="container 25%">
                     <div class="image fit captioned align-center">
-                      <a href="images/rodi.pdf">
+                      <a href="https://arxiv.org/pdf/1910.10223.pdf">
                         <img src="images/paper.jpg" alt="" style="border:1px solid black"/>
                       </a>
-                      <a href="https://arxiv.org/">arXiv</a>
+                      <a href="https://arxiv.org/abs/1910.10223">arXiv</a>
                       <div class="headerDivider"></div>
                       <a href="images/rodi.bib">BibTeX</a>
                       <div class="headerDivider"></div>
@@ -200,6 +200,26 @@ appearance (vertical direction).</h3>
 									<img src="images/sprites_compare.jpg" alt="" />
                   </a>
 									<h3>Comparison on the Sprites dataset.</h3>
+								</div>
+</div>
+</div>
+<div class="row 150%">
+<div class="6u 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/model_architecture.png">
+									<img src="images/model_architecture.jpg" alt="" />
+                  </a>
+									<h3>Overview of our model.</h3>
+								</div>
+</div>
+<div class="6u$ 12u$(xsmall)">
+
+								<div class="image fit captioned">
+                  <a href="images/sprites_quantitative.png">
+									<img src="images/sprites_quantitative.jpg" alt="" />
+                  </a>
+									<h3>Quantitative comparison on the Sprites dataset.</h3>
 								</div>
 </div>
 </div>
